      tests that fail on buildds (presumably due to missing /etc/hostname),
      and run tests during package build.
    - Fix FTBFS against recent kernels & glibc.
    - Create disk/by-partlabel links for mmcblk partitions.
    - Hack to support system-image read-only /etc, and modify files in
      /etc/writable/ instead.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 17:29:00 +0200

systemd (208-7) UNRELEASED; urgency=medium

  [ Michael Biebl ]
  * Mask remaining services provided by the initscripts package and document
    in more detail why certain services have been masked. (Closes: #659264)

  [ Jon Severinsson ]
  * Cherry-pick upstream fix for journal file permissions.

 -- Michael Biebl <biebl@debian.org>  Thu, 17 Jul 2014 00:48:14 +0200

systemd (208-6) unstable; urgency=medium

  [ Jon Severinsson ]
  * Add v208-stable patch series.
    - Update Debian patches to apply on top of v208-stable.
    - Move new manpages to libsystemd-*-dev as appropriate.

  [ Michael Biebl ]
  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Wed, 16 Jul 2014 00:44:15 +0200

systemd (208-5) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 13:41:32 +0200

systemd (208-4) experimental; urgency=medium

  * Merge changes from unstable branch.
  * Drop alternative dependency on systemd-shim in libpam-systemd. The
    systemd-shim package no longer provides an environment to run
    systemd-logind standalone. See #752939 for further details.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 01:22:11 +0200

systemd (208-3) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Wed, 25 Jun 2014 11:29:07 +0200

systemd (208-2) experimental; urgency=medium

  [ Sjoerd Simons ]
  * Don't stop a running user manager from garbage collecting the users. Fixes
    long shutdown times when using a systemd user session
