@@ -8,6 +8,8 @@ systemd (208-6ubuntu1) UNRELEASED; urgency=medium
     - Create disk/by-partlabel links for mmcblk partitions.
     - Hack to support system-image read-only /etc, and modify files in
       /etc/writable/ instead.
+    - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
+      upgrades, and we already have the automatic per-file symlinking.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 17:29:00 +0200
 
